worst commit ever, no I won't rebase it: debug navigation and link tag
selectors

--- a/newebe/client/app/views/templates/micropost.jade
+++ b/newebe/client/app/views/templates/micropost.jade
@@ -2,7 +2,7 @@
     span.author #{model.author}
     span.verb #{model.verb}
 .pt05
-    | !{model.content}
+    | !{model.displayContent}
     
 span.date.smaller #{model.displayDate}
 .micropost-buttons
