--- a/newebe/client/app/views/templates/microposts.jade
+++ b/newebe/client/app/views/templates/microposts.jade
@@ -3,7 +3,7 @@ div
 div
     button#micropost-post-button send
 .line
-    #micropost-tag-list
+    #micropost-tag-list.tag-list
 .line
     #micropost-all
 .line
