allow to attach pictures to posts

--- a/newebe/client/app/views/templates/microposts.jade
+++ b/newebe/client/app/views/templates/microposts.jade
@@ -2,6 +2,9 @@ div
     textarea#micropost-field
 div
     button#micropost-post-button send
+    .js-fileapi-wrapper
+        input#attach-picture(type="file")
+        #preview-list.line
 .line
     #micropost-tag-list.tag-list
 .line
