--- a/newebe/client/app/views/templates/micropost.jade
+++ b/newebe/client/app/views/templates/micropost.jade
@@ -1,8 +1,9 @@
 .infos.small
     span.author #{model.author}
     span.verb #{model.verb}
-.pt05
-    | !{model.displayContent}
+.line.pl0
+    .pt05.w40.mod.left
+        | !{model.displayContent}
     
 span.date.smaller #{model.displayDate}
 .micropost-buttons
