--- a/newebe/client/app/views/templates/home.jade
+++ b/newebe/client/app/views/templates/home.jade
@@ -3,7 +3,7 @@ nav#navigation.hidden
         li
             a#microposts-button.active(href="#microposts") news feed
         li
-            a#activities-button.active(href="#notes") notes
+            a#notes-button.active(href="#notes") notes
         li
             a#contacts-button(href="#contacts") contacts
         li
