--- a/newebe/client/app/views/templates/microposts.jade
+++ b/newebe/client/app/views/templates/microposts.jade
@@ -2,7 +2,7 @@ div
     textarea#micropost-field
 div
     button#micropost-post-button send
-    button#send_attachment
+    button#add-attachment
         img(src="static/images/attachment_white.png", alt="attachement button")
     .js-fileapi-wrapper
         input#attach-picture(type="file")
