make stylesheets more modular

--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -11,15 +11,14 @@
 @import '_layout'
 @import '_responsive'
 
+@import '_navigation'
+@import '_micropost'
 @import '_note'
+@import '_profile'
+@import '_contact'
 
 iframe
     border 0
-
-
-full-size
-    width: 100%
-    height: 100%
 
 html
 body
@@ -47,263 +46,3 @@ body
 
     input:focus
         border: 0
-
-#navigation
-    background: black
-    box-shadow: -1px 3px 4px black + 20%
-
-    li
-        a
-            border: 0
-            font-weight: bold
-            color: white
-            background-color: black
-            transition: background-color 200ms linear
-            cursor: pointer
-            text-shadow: 0 0 0 #FFF
-
-        a:hover
-            color: #444
-            font-weight: bold
-            text-decoration: none
-            text-shadow: 0 0 0 #FFF
-            background-color: purple
-            transition: background-color 200ms linear
-            color: white
-
-        a.active
-            background-color: #DEF
-            transition: background-color 200ms linear
-            color: #DEF - 80%
-
-
-#profile-view
-
-    p
-        margin: 0 
-
-    input:hover
-    input:active
-    input:focus
-        border-bottom: 1px solid purple
-
-    input
-        border-radius: 0em
-        padding: 0em
-        border-bottom: 1px solid transparent
-        width: 100%
-
-    button
-        margin-left: 0
-
-    #profile-description
-        border: 1px solid transparent
-        padding: 1em
-        font-size: 1.4em
-
-    #profile-description:hover
-    #profile-description:active
-        border: 1px solid purple
-
-    #profile-name-field 
-        font-size: 40px
-        font-weight: bold
-
-    #profile-url-field
-        font-size: 16px
-
-    // Display action buttons when mouse is over the section
-    .main-section
-        #change-picture-button:not(:hover)
-            background-color: lightgrey
-            transition: background-color 200ms linear
-
-        #sesame-stuff
-            button:not(:hover)
-                background-color: lightgrey
-                transition: background-color 200ms linear
-
-        #change-password-button
-            margin-left: 0
-
-    .main-section:hover
-        #change-picture-button:not(:hover)
-            background-color: red
-            transition: background-color 200ms linear
-
-        #sesame-stuff
-            button:not(:hover)
-                background-color: red
-                transition: background-color 200ms linear
-
-        #change-password-button
-            display: inline
-
-    #sesame-form
-        display: none
-
-    // Ugly stuff required to override fine-uploader styles
-    #change-picture-button
-        cursor: pointer
-        background-color: red
-        padding: 10px
-        color: white
-        font-weight: bold
-        height: 45px
-        width: 100%
-        max-width: 400px
-        transition: background-color 200ms linear
-
-        input
-            cursor: pointer
-            font-size: 0.1em
-            padding: 0em
-            border-radius: 0em
-
-    #change-picture-button:hover
-        cursor: pointer
-        background-color: purple
-        transition: background-color 200ms linear
-
-    #change-picture-button:active
-        cursor: pointer
-        background-color: purple - 10%
-        box-shadow: inset 3px 3px 3px rgba(0, 0, 0, 0.2)
-
-#contacts-view
-    padding-top: 10px
-    padding-left: 10px
-
-    #new-contact-field
-        margin: 2px 0 0 10px
-        border-radius: 0em
-        width: 600px
-        padding: 0 0 0 10px
-        border: 1px solid #DDD
-
-    #new-contact-field:focus
-    #new-contact-field:active
-        border-bottom: 1px solid purple
-
-    .contact-line:not(:hover)
-        .contact-buttons
-            button
-                background: lightgrey
-
-    .contact-line
-        display: block
-        width: 100%
-        padding: 0
-
-        .name
-            padding-top: 15px
-
-        .url
-            font-style: italic
-            margin-left: 20px
-            padding-top: 15px
-
-        .state
-            padding-top: 15px
-            width: 100px
-             
-        .contact-buttons
-            padding: 0
-
-            button
-                padding: 5px 10px
-
-        .contact-tag
-            font-size: 10px
-            padding: 5px
-
-    .contact-line:hover
-        .contact-buttons
-            display: table
-
-    p.error
-        margin: 0 0 0 20px
-
-    .tag-delete-button
-        margin-left: 0
-        padding: 2px 4px
-
-    .tag-selector
-        display: inline
-
-    .tag-selector:not(:hover)
-        .tag-delete-button
-            background: lightgrey
-
-    #tag-list
-        margin-bottom: 20px
-
-    #tag-list
-    #add-tag
-    .contact-tags
-        display: inline-block
-
-    .tag-all:not(:hover)
-        .tag-add-button
-            background: lightgrey
-
-    .contact-tags
-        padding: 0
-        margin-top: 4px
-
-.tag-select-button
-    display: inline-block
-    
-.toggle-button:active
-    box-shadow: none
-
-#microposts-view
-    .js-fileapi-wrapper
-        display: none
-
-        input
-            border: 1px solid black
-            margin-left: 10px
-            font-size: 14px
-
-        canvas
-            margin-left: 10px
-
-    .micropost
-        border-top: 1px solid #DDD
-
-        div
-            padding: 0
-
-        .micropost-attachments
-            display: none
-
-    .author
-        font-weight: bold
-        margin-right: 5px 
-
-    .micropost-buttons 
-        display: none
-
-    .micropost button
-        margin-left: 0
-        padding: 5px
-        font-size: 12px
-
-    .micropost p
-        margin: 3px 0
-
-    .micropost:hover
-        background: #F5F0FA
-
-    .micropost.selected
-        background: blue + 40%
-
-        .micropost-attachments
-            display: inline-block
-
-    .tag-list
-        div
-            float: left
-
-
