add note selector classes

--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -46,3 +46,10 @@ body
 
     input:focus
         border: 0
+
+#note-selector-widget
+    position: absolute
+    top: 20px
+    left: 20px
+    background: black
+
