--- a/newebe/client/app/views/templates/micropost.jade
+++ b/newebe/client/app/views/templates/micropost.jade
@@ -8,3 +8,4 @@
 span.date.smaller #{model.displayDate}
 .micropost-buttons
     button.micropost-delete-button delete
+    button.micropost-save-to-note-button save to note
