--- a/newebe/client/public/stylesheets/app.css
+++ b/newebe/client/public/stylesheets/app.css
@@ -3036,6 +3036,12 @@ body,
 #home input:focus {
   border: 0;
 }
+#note-selector-widget {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  background: #000;
+}
 .chromeframe { margin: 0.2em 0; background: #ccc; color: #000; padding: 0.2em 0; }
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
 .ir br { display: none; }
