debug router, try to improve alerts, add note_selector

--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -47,9 +47,20 @@ body
     input:focus
         border: 0
 
+#alert-widget
 #note-selector-widget
-    position: absolute
-    top: 20px
-    left: 20px
+    display: none
+    width: 320px
     background: black
+    margin: auto
+    position: absolute
+    top: 0
+    left: 0
+    bottom: 0
+    right: 0
 
+#alert-widget
+    height: 200px
+
+#note-selector-widget
+    height: 320px
