--- a/newebe/client/public/stylesheets/app.css
+++ b/newebe/client/public/stylesheets/app.css
@@ -3036,11 +3036,23 @@ body,
 #home input:focus {
   border: 0;
 }
+#alert-widget,
 #note-selector-widget {
-  position: absolute;
-  top: 20px;
-  left: 20px;
+  display: none;
+  width: 320px;
   background: #000;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+#alert-widget {
+  height: 200px;
+}
+#note-selector-widget {
+  height: 320px;
 }
 .chromeframe { margin: 0.2em 0; background: #ccc; color: #000; padding: 0.2em 0; }
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
