debug profile layout

--- a/newebe/client/app/views/templates/profile.jade
+++ b/newebe/client/app/views/templates/profile.jade
@@ -1,5 +1,5 @@
 .line.full-size
-    .w400p.mod.left.full-size.main-section
+    .w400p.mod.left.main-section
         #profile-picture-section
             img#profile-picture(src="user/picture.jpg")
             #change-picture-button
