make alerts look nicer

--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -72,7 +72,12 @@ body
 
 
 #alert-widget
-    height: 200px
+    height: 160px
+    text-align: center
+    padding: 20px
+    font-size: 26px
+    border-radius: 10px
+    font-family: robotic, main
 
 #note-selector-widget
     height: 320px
