--- a/newebe/client/app/views/templates/home.jade
+++ b/newebe/client/app/views/templates/home.jade
@@ -13,6 +13,8 @@ nav#navigation.hidden
         li.right
             a#infos-button(href="http://newebe.org/#documentation"
                            target="_blank") help
+        li.right
+            a#activities-button(href="#activities") logs
 #home
     p loading...
 
