--- a/newebe/client/app/views/styles/_base.styl
+++ b/newebe/client/app/views/styles/_base.styl
@@ -81,6 +81,9 @@ input
 
 // Helpers
 
+.date
+    display: inline-block
+
 .middle
     padding-top: 20%
     
@@ -102,9 +105,6 @@ input
 
 .full-height
     height: 100%
-
-.w400p
-    width: 400px
 
 .field
     box-shadow: inset 3px 3px 3px rgba(0, 0, 0, 0.2)
@@ -136,4 +136,3 @@ input
 .full-size
     width: 100%
     height: 100%
-
