put activity log back with its functionalities

--- a/newebe/client/app/views/styles/_base.styl
+++ b/newebe/client/app/views/styles/_base.styl
@@ -52,6 +52,9 @@ button
     color: white
     font-weight: bold
 
+button.smaller
+    padding: 3px
+
 button:hover
     background-color: purple
     transition: background-color 200ms linear
