--- a/newebe/client/public/stylesheets/app.css
+++ b/newebe/client/public/stylesheets/app.css
@@ -2279,6 +2279,9 @@ button {
   color: #fff;
   font-weight: bold;
 }
+button.smaller {
+  padding: 3px;
+}
 button:hover {
   background-color: #ad2bad;
   -webkit-transition: background-color 200ms linear;
@@ -3076,6 +3079,12 @@ body,
 }
 #note-selector-widget {
   height: 320px;
+}
+.activity-errors {
+  display: none;
+}
+.error {
+  cursor: pointer;
 }
 .chromeframe { margin: 0.2em 0; background: #ccc; color: #000; padding: 0.2em 0; }
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
