style fixes (notes and profile)

--- a/newebe/client/app/views/styles/_note.styl
+++ b/newebe/client/app/views/styles/_note.styl
@@ -3,6 +3,8 @@
 
 #notes-view
     .note
+        padding-top: 0
+
         button
             margin-left: 0
             padding: 5px
@@ -10,6 +12,9 @@
 
         p
             margin: 3px 0
+
+        input
+            padding: 0
 
         .note-title
             border-radius: 0
@@ -22,6 +27,9 @@
         .note-title:active
         .note-title:focus
             border-bottom: 1px solid purple
+
+        .mod
+            padding: 0 10px
 
     .note:hover
         background: #F5F0FA
