--- a/newebe/client/app/views/styles/_profile.styl
+++ b/newebe/client/app/views/styles/_profile.styl
@@ -25,11 +25,23 @@
     #profile-description:active
         border: 1px solid purple
 
+    #profile-name-field:hover
+    #profile-name-field:active
+    #profile-url-field:hover
+    #profile-url-field:active
+        border-bottom: 1px solid purple
+
     #profile-name-field 
+        padding-left: 0
+        padding-bottom: 3px
+        border-radius: 0
+        border-bottom: 1px solid transparent
         font-size: 40px
         font-weight: bold
 
     #profile-url-field
+        border-radius: 0
+        border-bottom: 1px solid transparent
         font-size: 16px
 
     // Display action buttons when mouse is over the section
