improve note ux

--- a/newebe/client/app/views/templates/note.jade
+++ b/newebe/client/app/views/templates/note.jade
@@ -7,5 +7,6 @@
     .line
         .note-buttons
             button.note-delete-button delete
+            button.note-unselect-button unselect
 
 .mod.w66.left.content-note.editable(data-button-class="all") #{model.content}
