change title of the news feed menu button

--- a/newebe/client/app/views/templates/home.jade
+++ b/newebe/client/app/views/templates/home.jade
@@ -1,7 +1,7 @@
 nav#navigation.hidden
     ul
         li
-            a#microposts-button.active(href="#microposts") news feed
+            a#microposts-button.active(href="#microposts") news
         li
             a#notes-button.active(href="#notes") notes
         li
