--- a/newebe/client/app/views/styles/_navigation.styl
+++ b/newebe/client/app/views/styles/_navigation.styl
@@ -1,6 +1,6 @@
 #navigation
     background: black
-    box-shadow: -1px 3px 4px black + 20%
+    box-shadow: -3px 2px 3px #AAA + 20%
 
     li
         a
