debug change password ux

--- a/newebe/client/app/views/styles/_profile.styl
+++ b/newebe/client/app/views/styles/_profile.styl
@@ -44,6 +44,7 @@
         border-bottom: 1px solid transparent
         font-size: 16px
 
+
     // Display action buttons when mouse is over the section
     .main-section
         #change-picture-button:not(:hover)
@@ -73,6 +74,13 @@
 
     #sesame-form
         display: none
+
+    #profile-sesame-field
+        border-radius: 0
+
+    #profile-sesame-field:focus
+    #profile-sesame-field:hover
+        border-bottom: 1px solid purple
 
     // Ugly stuff required to override fine-uploader styles
     #change-picture-button
